<resources>
    <string name="app_name">MyLady Bucks</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="phone_number_not_found">"Please add your phone number,\nclick here."</string>
    <string name="facebook_application_id" translatable="false">1068441756631557</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1068441756631557</string>


    <string name="menu_title">Coffee Menu</string>

    <string name="generic_total_label">Total:</string>
    <string name="generic_add_more_items_button">Add more items</string>
    <string name="go_to_cart_button">Go to Cart</string>
    <string name="label_unitary">Unitary value:</string>
    <string name="label_total">Total:</string>
    <string name="snack_bar_item_added">%1$d %2$s added to cart.</string>
    <string name="order_requested">Your order was placed. Enjoy your coffee =)</string>
    <string name="snack_bar_item_error">Ops, we couldn\'t place your order, try again later.</string>
    <string name="btn_place_order">Place Order</string>
    <string name="order_full_title">Order</string>
    <string name="announ_title">Announcements</string>
    <string name="item_default_quantity">01</string>
    <string name="add_to_cart_button">Add to cart</string>
    <string name="comments_hint">Comments</string>
    <string name="dialog_title">Hey</string>
    <string name="title_order">Coffee(s)</string>
    <string name="dialog_text">Do you really want to remove this coffee?</string>
    <string name="order_title">Order</string>
    <string name="favorite_order_title">Select your favorite</string>
    <string name="favorite_order_login_error">Please login before adding widget.</string>
    <string name="favorite_order_error">Please make sure to have an order to place widget.</string>
    <string name="appwidget_text">Give me Coffee!</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="minimum_qty">01</string>
    <string name="sign_out">Sign out</string>
    <string name="save">Save</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="contentdesc_announcement">Image showing announcement from MyLadyBucks.</string>
    <string name="contentdesc_coffee_image">Image showing a coffee.</string>
    <string name="contentdesc_profile_pic">Your profile picture.</string>
    <string name="contentdesc_loading_animation">Image showing a coffee mug filling, represents loading status.</string>
    <string name="contentdesc_more_coffee">Button for adding more of this coffee.</string>
    <string name="contentdesc_less_coffee">Button for removing this coffee.</string>
    <string name="contentdesc_delete_coffee">Button for delete this coffee.</string>
    <string name="contentdesc_fab">Button to show Coffee Menu.</string>
    <string name="contentdesc_title_image">Image for title</string>
    <string name="dialog_place_order">Placing your order</string>
    <string name="please_wait">Please wait...</string>
    <string name="status_new">NEW</string>
    <string name="orders_title">Order(s)</string>
    <string name="favorite_widget">This order was added as favorite for this widget</string>

    <string name="menu_home">Home</string>
    <string name="menu_purchases">Purchases</string>
    <string name="menu_account">Account</string>
    <string name="menu_github">GitHub</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_about">About</string>
    <string name="menu_menu">Menu</string>
</resources>
