<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_home"
            android:checked="true"
            android:enabled="true"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/action_menu"
            android:enabled="true"
            android:icon="@drawable/book"
            android:title="@string/menu_menu" />

        <item
            android:id="@+id/action_purchases"
            android:enabled="true"
            android:icon="@drawable/cart"
            android:title="@string/menu_purchases" />
        <item android:title="@string/menu_account">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/action_profile"
                        android:enabled="true"
                        android:icon="@drawable/account"
                        android:title="@string/menu_profile" />
                </group>
            </menu>
        </item>
        <item android:title="@string/menu_about">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/action_git"
                        android:enabled="true"
                        android:icon="@drawable/github_circle"
                        android:title="@string/menu_github" />
                </group>
            </menu>
        </item>
    </group>

</menu>