<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/loading_coffee_size"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/dialog_place_order"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iv_dialog_animation"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/frameLayout"
        android:layout_marginLeft="@dimen/default_margin_inner_layout"
        android:layout_marginRight="@dimen/default_margin_inner_layout"
        android:layout_marginTop="@dimen/default_margin_inner_layout"
        android:layout_toEndOf="@+id/iv_dialog_animation"
        android:gravity="center_vertical"
        android:text="@string/please_wait"
        android:textSize="@dimen/default_subtitle_text_size" />

    <ImageView
        android:id="@+id/iv_dialog_animation"
        android:layout_width="@dimen/dialog_animation"
        android:layout_height="@dimen/dialog_animation"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/frameLayout"
        android:layout_margin="@dimen/default_margin_inner_layout"
        android:background="@drawable/coffee_animation"
        android:contentDescription="@string/contentdesc_loading_animation" />
</RelativeLayout>