<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_item_menu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackgroundBorderless"
    android:clickable="true"
    android:focusable="true"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/iv_order_full_remove"
        android:layout_width="@dimen/default_margin_top"
        android:layout_height="@dimen/default_margin_top"
        android:layout_marginEnd="@dimen/default_margin_layout"
        android:layout_marginTop="@dimen/default_margin_top"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/contentdesc_less_coffee"
        android:focusable="true"
        app:layout_constraintEnd_toStartOf="@+id/tv_order_full_quantity"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/down_button" />

    <TextView
        android:id="@+id/tv_order_full_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin_layout"
        android:elevation="3dp"
        android:text="@string/minimum_qty"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_order_full_add"
        app:layout_constraintEnd_toStartOf="@+id/iv_order_full_add"
        app:layout_constraintTop_toTopOf="@+id/iv_order_full_add" />

    <ImageView
        android:id="@+id/iv_order_full_add"
        android:layout_width="@dimen/default_margin_top"
        android:layout_height="@dimen/default_margin_top"
        android:layout_marginEnd="@dimen/default_margin_inner_layout"
        android:layout_marginTop="@dimen/default_margin_top"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/contentdesc_more_coffee"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/up_button" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="@dimen/divider_height"
        android:layout_marginEnd="@dimen/default_margin_inner_layout"
        android:layout_marginStart="@dimen/default_margin_inner_layout"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_full_coffee_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin_inner_layout"
        android:layout_marginStart="@dimen/default_margin_inner_layout"
        android:layout_marginTop="@dimen/default_margin_top"
        android:elevation="3dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textSize="@dimen/coffee_name"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/iv_delete_coffee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_full_coffee_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_inner_layout"
        android:layout_marginTop="@dimen/default_margin_inner_layout"
        android:elevation="3dp"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/coffee_name"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_order_full_quantity"
        app:layout_constraintStart_toStartOf="@+id/tv_order_full_quantity"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_full_quantity" />

    <ImageView
        android:id="@+id/iv_delete_coffee"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginEnd="@dimen/default_margin_inner_layout"
        android:clickable="true"
        android:contentDescription="@string/contentdesc_delete_coffee"
        android:focusable="true"
        android:tint="@color/text_color_for_icons"
        app:layout_constraintBottom_toBottomOf="@+id/iv_order_full_remove"
        app:layout_constraintEnd_toStartOf="@+id/iv_order_full_remove"
        app:layout_constraintTop_toTopOf="@+id/iv_order_full_remove"
        app:srcCompat="@drawable/delete" />

</android.support.constraint.ConstraintLayout>