<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin_layout"
        android:layout_marginStart="@dimen/default_margin_layout"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_addcart_coffee_label_value4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin_inner_layout"
                android:elevation="3dp"
                android:text="Total:"
                android:textSize="@dimen/default_subtitle_text_size"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_order_item_total_value"
                app:layout_constraintEnd_toStartOf="@+id/tv_order_item_total_value" />

            <TextView
                android:id="@+id/tv_order_item_total_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin_inner_layout"
                android:layout_marginTop="@dimen/default_margin_inner_layout"
                android:elevation="3dp"
                android:text=""
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/default_subtitle_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/iv_order_item_add"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="@dimen/default_margin_inner_layout"
                android:layout_marginStart="@dimen/default_margin_inner_layout"
                android:layout_marginTop="@dimen/default_margin_layout"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_order_item_quantity" />

            <TextView
                android:id="@+id/tv_order_item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin_inner_layout"
                android:layout_marginEnd="@dimen/default_margin_inner_layout"
                android:layout_marginTop="@dimen/default_margin_inner_layout"
                android:elevation="3dp"
                android:text="@string/item_default_quantity"
                android:textSize="@dimen/default_subtitle_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/iv_order_item_add"
                app:layout_constraintEnd_toStartOf="@+id/iv_order_item_add"
                app:layout_constraintTop_toTopOf="@+id/iv_order_item_add" />

            <TextView
                android:id="@+id/tv_order_item_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_inner_layout"
                android:elevation="3dp"
                android:text=""
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/default_subtitle_text_size"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_order_item_coffee_label_value"
                app:layout_constraintStart_toEndOf="@+id/tv_order_item_coffee_label_value" />

            <TextView
                android:id="@+id/tv_order_item_coffee_label_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_inner_layout"
                android:elevation="3dp"
                android:text="Unitary value:"
                android:textSize="@dimen/default_subtitle_text_size"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_order_item_quantity"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_order_item_coffee_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin_inner_layout"
                android:layout_marginStart="@dimen/default_margin_inner_layout"
                android:layout_marginTop="@dimen/default_margin_inner_layout"
                android:elevation="3dp"
                android:minLines="2"
                android:text=""
                android:textSize="@dimen/default_subtitle_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_order_item_coffee_name" />

            <TextView
                android:id="@+id/tv_order_item_coffee_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin_inner_layout"
                android:layout_marginStart="@dimen/default_margin_inner_layout"
                android:layout_marginTop="@dimen/default_margin_inner_layout"
                android:elevation="3dp"
                android:text=""
                android:textSize="@dimen/coffee_name"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_order_item_remove"
                android:layout_width="@dimen/default_margin_top"
                android:layout_height="@dimen/default_margin_top"
                android:layout_marginEnd="@dimen/default_margin_inner_layout"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="@+id/iv_order_item_add"
                app:layout_constraintEnd_toStartOf="@+id/tv_order_item_quantity"
                app:layout_constraintTop_toTopOf="@+id/iv_order_item_add"
                app:srcCompat="@drawable/down_button" />

            <ImageView
                android:id="@+id/iv_order_item_add"
                android:layout_width="@dimen/default_margin_top"
                android:layout_height="@dimen/default_margin_top"
                android:layout_marginEnd="@dimen/default_margin_inner_layout"
                android:layout_marginTop="@dimen/default_margin_inner_layout"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_order_item_coffee_description"
                app:srcCompat="@drawable/up_button" />

            <EditText
                android:id="@+id/et_order_item_comments"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin_layout"
                android:layout_marginEnd="@dimen/default_margin_inner_layout"
                android:layout_marginStart="@dimen/default_margin_inner_layout"
                android:layout_marginTop="@dimen/default_margin_inner_layout"
                android:ems="10"
                android:hint="@string/comments_hint"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_addcart_coffee_label_value4" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="0dp"
        android:layout_height="@dimen/coffee_picture_card_view_height"
        android:layout_marginEnd="@dimen/default_margin_layout"
        android:layout_marginStart="@dimen/default_margin_layout"
        android:layout_marginTop="@dimen/default_margin_top"
        android:elevation="@dimen/default_margin_inner_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_item_coffee_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:transitionName="coffeePicture"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/profile" />
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btn_order_item_add_cart"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/add_to_cart_button"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>